--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,7 @@
 spring.jpa.show-sql=true
-
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
-spring.datasource.url=jdbc:mysql://localhost:3306/cleanmasterdb
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-
 spring.jpa.hibernate.ddl-auto=update
 
-spring.datasource.username=root
-spring.datasource.password=123456Aa
+#Profile Configuration
+spring.profiles.active=dev
+
+
