Sample working junit test

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,13 @@
 spring:
   profiles:
-    active: test,commondb
+    active: dev,commondb
 
 
 ---
 spring:
     profiles : dev
     datasource:
+      url: jdbc:mysql://localhost:3306/cleanmasterdb
       username : root
       password : 123456Aa
 
