--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -32,6 +32,9 @@ spring:
     driver-class-name : com.mysql.jdbc.Driver
   jpa:
     database-platform : org.hibernate.dialect.MySQL5Dialect
+    properties:
+      hibernate :
+        format_sql: true
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     show-sql: true
