--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -36,5 +36,5 @@ spring:
       hibernate :
         format_sql: true
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     show-sql: true
