--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,5 @@
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
-
-#Profile Configuration
-spring.profiles.active=dev
-
-
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
+spring.datasource.url=jdbc:mysql://localhost:3306/cleanmasterdb
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=123456Aa
